testsuite/bsc.names/portRenaming/invalidAttrs/port/Space.bsv

interface Ifc;
 method Action check ((* port="y " *)Bool x);
endinterface

